<resources>
    <string name="app_name">SkinDiseaseDetectionApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome</string>
    <string name="app">App</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="denied">"Tidak mendapatkan permission."</string>
    <string name="failedCamera">Tidak dapat memunculkan Kamera</string>
    <string name="logo">logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="signin">Sign in</string>
    <string name="or">OR</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_gmail">Login with Gmail</string>
    <string name="login_with_google">login with google</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_don_t_have_account">I don\'t have account.</string>
    <string name="register_your_account">Register Your Account Now</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, dolore dolorum error et exercitationem fuga fugit labore laborum laudantium magni minima molestiae numquam, pariatur porro quibusdam quidem, rem repellendus sequi.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="signup">Sign Up</string>
    <string name="minPassword">Password At least  must be 6 Character !</string>
    <string name="re_enter_your_passsword">Re-enter Your Passsword</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="null_email">Please Enter Your Email!</string>
    <string name="null_name">Please Enter Your Name!</string>
    <string name="not_valid_email">Your Email format was Invalid</string>
    <string name="null_password">Please Enter Your Your Password!</string>
    <string name="pass_not_same">Your first and second Password Was Not Same!</string>
    <string name="should_6_password">At least enter 6 characters in password</string>
    <string name="mudah_fleksibel"><![CDATA[Masalah kulitmu jadi lebih mudah & fleksibel]]></string>
    <string name="logo_selfie">logo selfie</string>
    <string name="get_started">Get Started</string>
    <string name="get_in_and">Get in and</string>
    <string name="start_checking_your_skin">Start checking your skin</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgor_password"><u>Forgot Your Password</u></string>
    <string name="create_new_account">Create New Account</string>
    <string name="account_register">Account Register</string>
    <string name="full_name">Full Name</string>
    <string name="button_back">button back</string>
    <string name="christie_joe">Christie Joe</string>
    <string name="upload_and_continue">Upload and Continue</string>
    <string name="skip_for_this"><u>Skip for this</u></string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save_profile">Save Profile</string>
    <string name="frame">frame</string>
    <string name="button_capture">Button Capture</string>
    <string name="button_switch_camera">Button Switch Camera</string>
    <string name="button_gallery">Button Gallery</string>
    <string name="logout">Logout</string>
    <string name="rate_us">Rate Us!</string>
    <string name="Settings">Settings</string>
    <string name="profiles">Profiles</string>
    <string name="scan_histories">Scan Histories</string>
    <string name="dummy_disease">Bullous Disease</string>
    <string name="hello">Hello</string>
    <string name="menu">Menu</string>
    <string name="scan_now">Scan Now</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="scan_result">Scan Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diagnose_prediction">Diagnose Prediction</string>
    <string name="description">Description</string>
    <string name="first_aid">First Aid</string>
    <string name="dummy_date">20 Juni 2022 18:20</string>
    <string name="date">Date</string>
    <string name="fetching_result">Fetching Result ...</string>
    <string name="failed_to_get_prediction">Failed to get prediction</string>
    <string name="tray_again">Try Again</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="image_preview">Image Preview From Gallery</string>
    <string name="set_as_main_profile">Set As Main Profile</string>
    <string name="finish">Finish</string>

</resources>