<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.front.GetStartedActivity"
    android:background="@color/grayBackground"
    android:paddingHorizontal="20dp"
    >

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgView"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/skincareoke"
        />

    <TextView
        android:id="@+id/label1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/mudah_fleksibel"
        app:layout_constraintTop_toBottomOf="@+id/imgView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        android:textColor="@color/blue_font_getstarted"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/nunito_regular"
        />

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgViewSelfie"
        android:contentDescription="@string/logo_selfie"
        app:layout_constraintTop_toBottomOf="@id/label1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/selfie_oke"
        />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgViewSelfie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_green"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_regular"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:fontFamily="@font/nunito_regular"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnGetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button_white"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>