<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".ui.scan.ResultScanActivity"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:padding="25dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgResult"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:shapeAppearanceOverlay="@style/rounded_profile_image_in_dashboard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/gif_oke"
        />
    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnose_prediction"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgResult"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvDiagnose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/diagnose_prediction"
        android:fontFamily="@font/helvetica"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/label1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvDiagnose"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_text"
        android:fontFamily="@font/helvetica"
        android:textSize="20sp"
        android:minLines="2"
        app:layout_constraintTop_toBottomOf="@id/label2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_aid"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvFirstAid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_text"
        android:fontFamily="@font/helvetica"
        android:textSize="20sp"
        android:minLines="2"
        app:layout_constraintTop_toBottomOf="@id/label3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvFirstAid"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_date"
        android:fontFamily="@font/helvetica"
        android:textSize="20sp"
        android:minLines="2"
        app:layout_constraintTop_toBottomOf="@id/label4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnFinish"
        android:background="@drawable/rounded_button_green"
        android:text="Continue"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_regular"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>