<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.CameraActivity">

    <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:id="@+id/curved_line1"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_curved_line"
        app:layout_constraintTop_toBottomOf="@id/switchCamera"
        android:contentDescription="@string/frame" />
    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/curved_line2"
        android:layout_marginTop="20dp"
        android:scaleX="-1"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_curved_line"
        app:layout_constraintTop_toBottomOf="@id/switchCamera"
        android:contentDescription="@string/frame"
        />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/curved_line3"
        android:scaleY="-1"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_curved_line"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnGalery"
        android:contentDescription="@string/frame"
        />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/curved_line4"
        android:scaleX="-1"
        android:scaleY="-1"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_curved_line"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnGalery"
        android:contentDescription="@string/frame"
        />



    <ImageView
            android:id="@+id/captureImage"
            android:contentDescription="@string/button_capture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_capture" />


    <ImageView
            android:id="@+id/switchCamera"
            android:contentDescription="@string/button_switch_camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/viewFinder"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_switch" />

    <ImageView
        android:id="@+id/btnGalery"
        android:layout_width="50dp"
        android:contentDescription="@string/button_gallery"
        android:layout_height="50dp"
        app:srcCompat="@drawable/frame_oke"
        app:layout_constraintTop_toTopOf="@id/captureImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>