<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/list_profile"
        android:id="@+id/list"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="195dp"
        android:layout_height="190dp"
        style="@style/rounded_profile_image_in_dashboard"
        app:layout_constraintTop_toTopOf="@id/list"
        app:layout_constraintStart_toStartOf="@id/list"
        app:layout_constraintEnd_toEndOf="@id/list"
        app:layout_constraintBottom_toBottomOf="@id/list"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:id="@+id/imgProfile"
        />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_in_profile"
        app:layout_constraintEnd_toEndOf="@id/imgProfile"
        app:layout_constraintBottom_toBottomOf="@id/imgProfile"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="17dp"
        />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list"
        android:layout_marginTop="30dp"
        android:text="@string/full_name"
        android:textSize="23sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_regular"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="10dp"
        android:id="@+id/layoutName"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:background="@drawable/rounded_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            android:textSize="19sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/cbSetProfile"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button_green"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="23sp"
        />

    <CheckBox
        android:id="@+id/cbSetProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        android:text="@string/set_as_main_profile"
        android:textSize="18sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_marginStart="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/cbSetProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        android:background="@drawable/rounded_button_green"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressBarDialog"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        tools:visibility="visible"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/black"
        />



</androidx.constraintlayout.widget.ConstraintLayout>